--- a/sites/all/themes/cni/css/ads.css
+++ b/sites/all/themes/cni/css/ads.css
@@ -32,6 +32,17 @@
     justify-content: space-around;
 }
 
+/* styles for preface tile ads */
+.preface-wrapper .region-preface-1 .block-simpleads .content {
+    padding: 1em;
+}
+
+.region-preface-1  .block-simpleads > div > div > div > div > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 /* OWN LOCAL
 --------------------------------------------------------------------------*/
 #block-etype-own-local .block-inner {
@@ -47,14 +58,17 @@
 
 /* css for Crowdy news sidebar ads */
 
-#CrowdynewsAd {margin: -20px;}
+#CrowdynewsAd {
+    margin: -20px;
+}
 
 /* css for etype google DFP sidebar ads */
 
-#div-gpt-ad-1487352373268-1 {margin: -20px;}
+#div-gpt-ad-1487352373268-1 {
+    margin: -20px;
+}
 
 /* css for etype google DFP bottom leaderboard */
-
 #div-gpt-ad-1487352373268-0 {
     margin: 0 auto 20px;
     width: 728px;
