--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -191,7 +191,7 @@ h3.site-slogan {
 }
 
 /* override module defaults */
-.views-slideshow-pager-fields > div{
+.views-slideshow-pager-fields > div {
     padding-left: 0;
 }
 
@@ -279,7 +279,7 @@ h3.site-slogan {
 /* MAIN CONTENT
 --------------------------------------------------------------------------*/
 
-.main-content-wrapper {
+.front .main-content-wrapper {
     margin-top: 20px;
 }
 
@@ -325,6 +325,10 @@ article .field-image {
 #postscript {
     color: #dddddd;
     font-size: 0.9em;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    white-space: nowrap;
 }
 
 #postscript a {
@@ -334,15 +338,14 @@ article .field-image {
 }
 
 .postscript-wrapper {
-    padding: 1em 1em 0;
+    padding: 1em;
     margin: 0;
     background: url(../images/postscript-bg.png);
-    border-top: 3px solid #252525;
 }
 
 /* override widths for .grid_3 in footer */
-.container_12 .postscript-wrapper .grid_3 {
-    width: 30% !important;
+.container_12 .postscript-wrapper .grid_4 {
+    width: inherit;
 }
 
 .postscript-wrapper .block-inner {
@@ -355,7 +358,7 @@ article .field-image {
 
 .postscript-wrapper h3 {
     display: block;
-    margin-bottom: 0.4em;
+    margin-bottom: 0.3em;
     line-height: 1.4em; /* for titles that go to second line */
 }
 
@@ -613,6 +616,7 @@ article .field-image {
     text-transform: uppercase;
     height: 33px;
     line-height: 33px;
+    font-size: 13px;
 }
 
 #main-menu ul.menu li a:hover {
@@ -629,6 +633,7 @@ article .field-image {
 /* Main Menu custom styling */
 #block-superfish-1, .sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
     background: #000000;
+    font-size: inherit;
 }
 
 #block-superfish-1 .block-inner {
@@ -1294,6 +1299,10 @@ textarea, select, input[type="date"], input[type="datetime"], input[type="dateti
     margin: 20px auto 0;
 }
 
+.not-front .region-main-menu-second-level .block-dfp {
+    margin: 20px auto 20px;
+}
+
 .region-content-bottom .block-dfp {
     width: 728px;
     margin: 0 auto 20px;
@@ -1314,6 +1323,7 @@ textarea, select, input[type="date"], input[type="datetime"], input[type="dateti
     font-size: 1em;
     line-height: 1.3em;
     text-transform: none;
+    margin-top: 1em;
 }
 
 #block-advpoll-advpoll-recent .submitted {
@@ -1359,6 +1369,13 @@ article.node-webform .node-content-wrapper h1.title {
     padding: 0;
 }
 
+/* Florida Public Legals */
+.view-id-legals .view-header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
 /* flexslider overrides */
 .flexslider {
     font: 0.8em/1.4 lato;
@@ -1378,4 +1395,15 @@ ul.flex-direction-nav {
 .content .node-article ul.slides,
 ul.slides {
     margin: 0;
+}
+
+/* views-fluid-grid Classifieds */
+div.views-fluid-grid {
+    margin-bottom: 1em;
+}
+
+li.views-fluid-grid-item {
+    color: inherit;
+    background: none;
+    border: none;
 }
