--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/news_center.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/news_center.css
@@ -909,3 +909,21 @@ h2.node-title {
 }
 
 #block-block-26 {margin-left:-7px;}
+
+#block-views-sports-block {
+	float: left;
+    margin-left: 10px;
+    margin-right: 0;
+    margin-top: 0;
+    padding-bottom: 6px;
+    width: 227px;
+	}
+	
+#block-views-sports-block h2 {
+	margin-left:10px;
+	}
+
+#block-views-sports-block .view-sports {
+    border-left: 1px solid #eeeeee;
+    padding-left: 10px;
+}
