--- a/sites/scottcountyrecord.etypegoogle8.com/local.css
+++ b/sites/scottcountyrecord.etypegoogle8.com/local.css
@@ -8,3 +8,8 @@
         justify-content: space-between;
     }
 }
+
+.node .field-name-field-image img {
+    width: inherit;
+    max-width: 100%;
+}
