--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -756,11 +756,10 @@ article .field-image {
 
 .node .field-name-field-image img {
     display: block;
-    margin-top: 0;
-    margin-left: 0;
-    margin-bottom: 0;
-    width: 100%;
-    height: auto
+    height: auto;
+    width: initial;
+    max-width: 100%;
+    margin: auto;
 }
 
 .node .field-name-field-video iframe {
