--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/screen-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/screen-layout.css
@@ -342,7 +342,7 @@ body.front h1 {
     width: 692px;
     border-top: none;
     height: 60px;
-    left: 0;
+    left: 10px;
     top: 420px;
 }
 
