--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-portrait-layout.css
@@ -290,7 +290,7 @@ h2, h3, h4, h5, h6 {
 .view-id-home_page .views-slideshow-controls-bottom {
     height: 60px;
     margin-top: 0;
-    left: 0;
+    left: 10px;
     width: 300px;
     z-index: 500;
     position: absolute;
