--- a/sites/lakeoconeenews.us/themes/lakeoconeenews/css/news_center.css
+++ b/sites/lakeoconeenews.us/themes/lakeoconeenews/css/news_center.css
@@ -244,6 +244,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 .views-field-body-1 .field-content {
     font-size: 12px;
+    color: #fff;
 }
 
 .region-content0 .block-views img, .region-content1 .block-views img, .region-content2 .block-views img {
