--- a/sites/msgr.com/themes/msgr/css/news_center.css
+++ b/sites/msgr.com/themes/msgr/css/news_center.css
@@ -244,6 +244,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 .views-field-body-1 .field-content {
     font-size: 12px;
+    color: #fff;
 }
 
 .region-content0 .block-views img, .region-content1 .block-views img, .region-content2 .block-views img {
@@ -930,4 +931,12 @@ h2.node-title {
 #block-views-business-directory-block img {
     margin-top: -20px;
     padding: 0px
+}
+
+/* slideshow fixes */
+#widget_pager_bottom_home_page-block_1 {
+    display: flex;
+    margin: 0;
+    justify-content: space-around;
+    width: inherit;
 }
