--- a/sites/plaqueminesgazette.com/themes/masthead/css/responsive.css
+++ b/sites/plaqueminesgazette.com/themes/masthead/css/responsive.css
@@ -461,3 +461,22 @@ blockquote {
 #block-simpleads-ad-groups-65 {
     text-align: center;
 }
+
+/* slideshow fixes */
+#block-views-slideshow-block .block-inner {
+    padding: 0 0 20px 0;
+}
+
+#widget_pager_bottom_slideshow-block_1 {
+    display: flex;
+    margin: 0;
+    justify-content: space-around;
+}
+
+.views-slideshow-pager-fields > div {
+    padding-left: 0;
+}
+
+.view-slideshow .views-slideshow-controls-bottom .views-field-field-image img {
+    margin: 0;
+}
