--- a/sites/clintondailynews.com/themes/masthead/css/responsive.css
+++ b/sites/clintondailynews.com/themes/masthead/css/responsive.css
@@ -331,13 +331,13 @@ Note: Design for a width of 420px
 }
 
 #block-simpleads-ad-groups-63 .content {
-    padding: 0px;
+    padding: 0;
     color: #000;
 }
 
 #block-simpleads-ad-groups-63 .block-inner {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 #block-block-11 {
