--- a/sites/all/themes/cni/css/theme.css
+++ b/sites/all/themes/cni/css/theme.css
@@ -1027,6 +1027,9 @@ ul.social-links {
 .googleplus {
     background: url(../images/googleplus.png) no-repeat;
 }
+.youtube {
+    background: url(../images/youtube.png) no-repeat;
+}
 
 /* MISC
 --------------------------------------------------------------------------*/
