--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -1,5 +1,6 @@
 /* own local */
-#block-block-36 .block-inner {
+#block-block-36 .block-inner,
+#block-block-35 .block-inner {
   padding: 0;
   border: none
 }
