--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -3,4 +3,8 @@
   padding: 0;
   border: none;
 }
-
+@media only screen and (min-width: 959px) {
+  .postscript-wrapper {
+    margin-right: 0;
+  }
+}
