--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -3,6 +3,9 @@
   padding: 0;
   border: none;
 }
+#block-block-40 .block-inner .content {
+  padding: 0;
+}
 @media only screen and (min-width: 959px) {
   .postscript-wrapper {
     margin-right: 0;
