--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -31,3 +31,8 @@ header {
     margin-right: 0;
   }
 }
+@media only screen and (max-width: 767px) {
+  .site-logo {
+    flex-basis: inherit%;
+  }
+}
