--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -33,6 +33,6 @@ header {
 }
 @media only screen and (max-width: 767px) {
   .site-logo {
-    flex-basis: inherit%;
+    flex-basis: inherit;
   }
 }
