--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 10pt;
+  line-height: 1.5em;
+}
 /* own local */
 #block-block-36 .block-inner,
 #block-block-35 .block-inner {
