--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -4,7 +4,7 @@ body {
   background-color: #ccc;
 }
 .page-inner {
-  background-color: #ccccc;
+  background-color: #ccc;
 }
 /* own local */
 #block-block-36 .block-inner,
