--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -9,7 +9,7 @@ body {
 .preface-wrapper .block .content {
   background-color: #fff;
 }
-.preface-wrapper .block .content h3.title a {
+.preface-wrapper .block h3.title a {
   color: #c00;
 }
 /* own local */
