--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -3,6 +3,10 @@ body {
   line-height: 1.5em;
   background-color: #ccc;
 }
+.region-user-menu {
+  margin: 0 2em 0.6em;
+  background-color: #ccc;
+}
 .page-inner {
   background-color: #ccc;
 }
