--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -4,12 +4,9 @@ body {
   background-color: #ccc;
 }
 .region-user-menu {
-  margin: 0 2em 0.6em;
+  margin: 0 2em auto;
   background-color: #ccc;
   max-width: 1000px;
-  margin: 0 auto;
-}
-}
 #user-menu ul.menu li a {
   border: none;
 }
