--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -4,7 +4,7 @@ body {
   background-color: #ccc;
 }
 .region-user-menu {
-  margin: 0 2em auto;
+  margin: 0 auto;
   background-color: #ccc;
   max-width: 1000px;
 }
