--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -22,6 +22,7 @@ header {
 #main-menu ul.menu li a {
   height: 40px;
   line-height: 40px;
+  font-weight: bold;
 }
 /* own local */
 #block-block-40 .block-inner {
