north east nebraska news

--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -77,7 +77,8 @@ header {
   #mobile-menu #menu-4474-1,
   #mobile-menu #menu-4624-1,
   #mobile-menu #menu-4625-1,
-  #mobile-menu .leaf {
+  #mobile-menu .leaf.first,
+  #mobile-menu .leaf.last {
     display: block;
     visibility: visible;
   }
