north east nebraska news

--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -97,4 +97,8 @@ header {
     display: none;
     visibility: hidden;
   }
+  #block-block-40 {
+    display: flex;
+    justify-content: center;
+  }
 }
