north east nebraska news

--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -103,8 +103,8 @@ header {
     justify-content: center;
   }
 }
-/* change link color */
-.node .content a {
+/* change link color in body text */
+.node .content .field-name-body a {
   color: #396;
   text-decoration: underline;
 }
