north east nebraska news

--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -140,7 +140,7 @@ header {
   #mobile-menu-control {
     height: 36px;
     min-width: 36px;
-    background: #f3f1f1 url(../images/hamburger-menu.png) 3px no-repeat;
+    background: #f3f1f1 url(/sites/all/themes/cni/images/hamburger-menu.png) 3px no-repeat;
     cursor: pointer;
   }
   #user-menu ul.menu {
