--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -73,13 +73,13 @@ header {
   }
   #mobile-menu #menu-4291-1,
   #mobile-menu #menu-4478-1,
+  #mobile-menu #menu-4477-1,
   #mobile-menu #menu-4476-1,
   #mobile-menu #menu-4475-1,
   #mobile-menu #menu-4474-1,
   #mobile-menu #menu-4624-1,
   #mobile-menu #menu-4625-1,
-  #mobile-menu .leaf.first,
-  #mobile-menu .leaf.last {
+  #mobile-menu .leaf.first {
     display: block;
     visibility: visible;
   }
