--- a/sites/northeastnebraskanews.etypegoogle8.com/local.css
+++ b/sites/northeastnebraskanews.etypegoogle8.com/local.css
@@ -79,7 +79,7 @@ header {
   #mobile-menu #menu-4474-1,
   #mobile-menu #menu-4624-1,
   #mobile-menu #menu-4625-1,
-  #mobile-menu .leaf.first {
+  #mobile-menu .leaf {
     display: block;
     visibility: visible;
   }
