--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -37,6 +37,9 @@ body {
     display: none;
     visibility: hidden;
   }
+  #block-simpleads-ad-groups-619 {
+    margin-top: 30px;
+  }
 }
 @media only screen and (min-width: 768px) {
   /* hide mobile ads on desktop */
