--- a/sites/clintondailynews.com/themes/masthead/css/style4.css
+++ b/sites/clintondailynews.com/themes/masthead/css/style4.css
@@ -615,11 +615,7 @@ h3.site-slogan {
 
 .node .taxonomy .field-type-taxonomy-term-reference {
     margin: 5px 0;
-    field-type-taxonomy-term-reference background: #f9f9f9;
-}
-
-.node .taxonomy-inner {
-    ≈
+    background: #f9f9f9;
 }
 
 .node .taxonomy a {
@@ -731,7 +727,7 @@ h3.site-slogan {
 }
 
 #search-block-form {
-    margin-top: 0x;
+    margin-top: 0;
     background: 0;
     line-height: 25px;
     border-left: 1px solid #dddddd;
@@ -743,8 +739,8 @@ h3.site-slogan {
 }
 
 #search-block-form .form-item, #search-block-form .form-actions {
-    margin-bottom: 0em;
-    margin-top: 0em;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 #search-block-form .form-text, #search-block-form .form-submit {
