--- a/sites/msgr.com/themes/msgr/css/news_center.css
+++ b/sites/msgr.com/themes/msgr/css/news_center.css
@@ -244,7 +244,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 .views-field-body-1 .field-content {
     font-size: 12px;
-    color: #fff;
+    color: #000;
+}
+
+#views_slideshow_cycle_main_home_page-block_1  .views-field-body-1 .field-content {
+    font-size: 12px;
+    color: #000;
 }
 
 .region-content0 .block-views img, .region-content1 .block-views img, .region-content2 .block-views img {
