--- a/sites/msgr.com/themes/msgr/css/news_center.css
+++ b/sites/msgr.com/themes/msgr/css/news_center.css
@@ -249,7 +249,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 #block-views-featured-article-block  .views-field-body-1 .field-content {
     font-size: 12px;
-    color: #000;
+    color: #fff;
 }
 
 .region-content0 .block-views img, .region-content1 .block-views img, .region-content2 .block-views img {
