remove kc globe

--- a/sites/iolaregister.etypegoogle8.com/local.css
+++ b/sites/iolaregister.etypegoogle8.com/local.css
@@ -18,6 +18,11 @@
 .views-slideshow-pager-fields > div {
   padding-left: 0; }
 
+.free-message {
+  display: none;
+  visibility: hidden;
+}
+
 /* RESPONSIVE */
 @media only screen and (max-width: 958px) and (min-width: 768px) {
   .view-slideshow .views_slideshow_main .views-field-body {
