--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -1,192 +1,65 @@
-#block-simpleads-ad-groups-489, #block-simpleads-ad-groups-490 {
-  display: none;
-  visibility: hidden;
-}
-
-/* override silly calendar module defaults */
-body.calendar {
-  width: inherit;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: "Anton", sans-serif;
-}
-
-body, #main-menu ul.menu, #user-menu {
-  font-family: "Roboto", sans-serif;
-}
-
-.node {
-  h1.title {
-    text-transform: capitalize;
-    line-height: 1.1em;
-  }
-}
-
-.node-teaser {
-  h2.title {
-    text-transform: capitalize;
-  }
-}
-
-.preface-wrapper {
-  .block-inner {
-    .views-field-title {
-      h3 {
-        text-transform: capitalize;
-      }
-    }
-  }
-}
-
 /* SLIDESHOW
 --------------------------------------------------------------------------*/
 /* override #main-content .block-inner */
 #main-content #block-views-slideshow-block .block-inner {
-  padding: 0 0 20px 0;
-}
+  padding: 10px; }
 
 .flexslider {
   margin: 0 0 2em 0;
-  font: 0.8em/1.4 "Roboto", sans-serif;
 }
 
-.view-slideshow {
-  .views-field-title {
-    margin-top: 0.5em;
-    h3 {
-      text-transform: capitalize;
-      font-size: 1.4em;
-    }
-  }
-}
+.view-slideshow .views-field-title {
+  margin-top: 0.5em; }
+  .view-slideshow .views-field-title h3 {
+    text-transform: capitalize;
+    font-size: 1.4em; }
 
 /* override module defaults */
 .views-slideshow-pager-fields > div {
-  padding-left: 0;
-}
+  padding-left: 0; }
 
-/* photo galleries block */
-#block-views-business-top-stories-block-5 {
-  .view-business-top-stories {
-    display: flex;
-    flex-wrap: nowrap;
-    .view-content {
-      flex-basis: 70%;
-      margin-right: 2em;
-    }
-    .attachment {
-      flex-basis: 30%;
-      background-color: #f3f1f1;
-      .view-business-top-stories {
-        display: block;
-        .view-footer {
-          margin: 0;
-          float: right;
-        }
-      }
-      .view-content {
-        flex-basis: 100%; /* override .view-content above */
-        margin-right: 0;
-      }
-    }
-    .views-field-title {
-      h3 {
-        text-transform: none;
-      }
-    }
-    .views-field-field-image {
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-  }
+.free-message {
+  display: none;
+  visibility: hidden;
 }
 
 /* RESPONSIVE */
 @media only screen and (max-width: 958px) and (min-width: 768px) {
-  .view-slideshow {
-    .views_slideshow_main {
-      .views-field-body {
-        font-size: inherit;
-        width: 470px;
-      }
-      .views-field-title {
-        width: 470px;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  #block-simpleads-ad-groups-489, #block-simpleads-ad-groups-490 {
-    display: block;
-    visibility: visible;
-  }
-
-  /* photo galleries block */
-  #block-views-business-top-stories-block-5 {
-    .view-business-top-stories {
-      display: flex;
-      flex-wrap: wrap;
-      .view-content {
-        flex-basis: 100%;
-        margin-right: 0;
-      }
-      .attachment {
-        margin-top: 1em;
-        flex-basis: 100%;
-        .view-content {
-          flex-basis: 100%;
-          margin-right: 0;
-        }
-      }
-    }
-  }
-}
-
+  .view-slideshow .views_slideshow_main .views-field-body {
+    font-size: inherit;
+    width: 470px; }
+  .view-slideshow .views_slideshow_main .views-field-title {
+    width: 470px; } }
 @media only screen and (max-width: 767px) and (min-width: 480px) {
-  .view-slideshow {
-    .views_slideshow_main {
-      .views-field-body {
-        width: 398px;
-        // hidden in regular theme css
-        display: block;
-      }
-      .views-field-title {
-        width: 398px;
-      }
-    }
-  }
-}
-
+  .view-slideshow .views_slideshow_main .views-field-body {
+    width: 398px;
+    display: block; }
+  .view-slideshow .views_slideshow_main .views-field-title {
+    width: 398px; } }
 @media only screen and (max-width: 479px) and (min-width: 421px) {
-  .view-slideshow {
-    .views_slideshow_main {
-      .views-field-body {
-        width: 278px;
-        // hidden in regular theme css
-        display: block;
-      }
-      .views-field-title {
-        width: 278px;
-      }
-    }
+  .view-slideshow .views_slideshow_main .views-field-body {
+    width: 278px;
+    display: block; }
+  .view-slideshow .views_slideshow_main .views-field-title {
+    width: 278px; } }
+@media only screen and (max-width: 420px) {
+  .view-slideshow .views_slideshow_main .views-field-body {
+    display: block;
+    width: 278px; }
+  .view-slideshow .views_slideshow_main .views-field-title {
+    width: 278px; } }
+
+/* mobile-menu options */
+@media only screen and (max-width: 767px) {
+  #menu-2301-1, #menu-3392-1, #menu-3393-1, #menu-3394-1, #menu-3401-1, #menu-2301-1 #menu-3580-1, #menu-3581-1, #menu-3582-1, #menu-3387-1, #menu-2423-1, #menu-699-1, #menu-2424-1, #menu-3400-1, #menu-2298-1, #menu-3400-1, #menu-3388-1 {
+    display: none;
+    visibility: hidden;
   }
 }
 
-@media only screen and (max-width: 420px) {
-  .view-slideshow {
-    .views_slideshow_main {
-      .views-field-body {
-        // hidden in regular theme css
-        display: block;
-        width: 278px;
-      }
-      .views-field-title {
-        width: 278px;
-      }
-    }
-  }
-}
+
+/* customer requests to change bg color and increase font sizes */
+.postscript-wrapper {background: #666666;}
+#postscript p {font-size: 0.9em;}
+#postscript a {font-size: 0.9em;}
+.postscript-wrapper h3 span {font-size: 1.2em;}
