iola register theme

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -20,4 +20,8 @@
 .postscript-wrapper h3 span {
   font-size: 1.2em; }
 
+/* rolls-roycing */
+.node-article .node-content-wrapper .content .sharethis-buttons {
+  margin-bottom: 8px; }
+
 /*# sourceMappingURL=iolaregister.css.map */
