--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -16,3 +16,15 @@
 #postscript p {font-size: 0.9em;}
 #postscript a {font-size: 0.9em;}
 .postscript-wrapper h3 span {font-size: 1.2em;}
+
+/* rolls-roycing */
+.node-article {
+  .node-content-wrapper
+  {
+    .content {
+      .sharethis-buttons {
+        margin-bottom: 8px;
+      }
+    }
+  }
+}
