iola register theme

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -22,6 +22,7 @@
 
 /* rolls-roycing */
 .node-article .node-content-wrapper .content .sharethis-buttons {
-  margin-bottom: 8px; }
+  margin-bottom: 8px;
+  float: right; }
 
 /*# sourceMappingURL=iolaregister.css.map */
