--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -25,4 +25,10 @@
   margin-bottom: 8px;
   float: right; }
 
+/* advanced poll */
+#block-advpoll-advpoll-recent {
+  background-color: #EAEAE8; }
+  #block-advpoll-advpoll-recent block-inner {
+    background: none; }
+
 /*# sourceMappingURL=iolaregister.css.map */
