--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -29,3 +29,12 @@
     }
   }
 }
+
+/* advanced poll */
+#block-advpoll-advpoll-recent {
+  background-color: #EAEAE8;
+  block-inner {
+    background: none;
+  }
+}
+
