--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -33,7 +33,8 @@
 /* advanced poll */
 #block-advpoll-advpoll-recent {
   background-color: #EAEAE8;
-  block-inner {
+  .block-inner {
     background: none;
+    border: none;
   }
 }
